# GarnetGridConsultingLLC

./: .env.example  .gitignore  .vercelignore  ADD_PROFILE_PHOTO.md  ARCHITECT_PAGE_DOCUMENTATION.md  CNAME  CONTACT_PAGE_REDESIGN.md  DEPLOY_AND_AUTH.md  Garnet Grid Consulting.html  JGPT_ROADMAP.md  JGPT_WORKFLOW.md  OPTIMIZATION_REPORT.md  OUTCOMES_ENHANCEMENT.md  OUTCOMES_PAGE_REDESIGN.md  PERFORMANCE_OPTIMIZATION.md  PROJECT_COMPLETE.md  QUICK_START.md  README.md  SHOWCASE_ENHANCEMENTS.md  TEAM_PAGE_DOCUMENTATION.md  UNIFIED_BACKGROUND_SYSTEM.md  ad-banners.css  ads-demo.html  anomaly.html  antigravity-bg.js  architect-page.css  architect.html  contact.html  contact.js  experience_line.txt  expertise.html  index.html  jGPT.html  jgpt-page.css  new_site.css  new_site.html  ollama_models.json  outcomes-unified-background.css  outcomes.html  parse_linkedin.py  (+18 more)
products/JGPT/JGPTa/jgpt-api/: .gitignore  Dockerfile  README.md  audit_system.py  dummy_semantic_model.txt  fix_user.py  model_context.json  project_context.json  pyproject.toml  upgrade_db.py
products/JGPT/JGPTa/jgpt-api/app/: main.py  test_crawler.py
products/JGPT/JGPTa/jgpt-api/exports/: Report_16_20260203_194332.md
products/JGPT/JGPTa/jgpt-api/jgpt_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
products/JGPT/JGPTa/jgpt-api/migrations/: 004_add_images.py
products/JGPT/JGPTa/jgpt-api/scripts/: ingest_kb.py  ingest_web.py  run_eval.py  sources.yaml  test_crawler.py  test_deepseek_connection.py  verify_workbench_tools.py
products/JGPT/JGPTa/jgpt-api/tests/: backend_button_audit.py  (+25 more)
(+792 files in other folders)
